--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Concept - The Game</h1>
-    {% if user.is_authenticate %}
+    {% if user.is_authenticated %}
         <a href="{% url 'core:logout' %}">Log Out</a>
     {% else %}
         <a href="{% url 'core:login' %}">Log In</a>
