correcting some texts

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Base</title>
+    <title>{% block title %}Base{% endblock %}</title>
 </head>
 <body>
     <h1>Concept - The Game</h1>
