--- a/templates/core/form.html
+++ b/templates/core/form.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Sign Up</title>
 </head>
 <body>
     <h1>Sign Up</h1>
