--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,9 @@
     {% else %}
         <a href="{% url 'core:login' %}">Log In</a>
     {% endif %}
+    {% if user %}
+        <a href="{% url 'core:detail' user.id %}">Minha conta</a>
+    {% endif %}
      <div class="content-wrapper">
          {% block content %}
          {% endblock %}
