--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <h1>Concept - The Game</h1>
     {% if user.is_authenticated %}
         <a href="{% url 'core:logout' %}">Log Out</a>
+        <a href="{% url 'core:detail' user.id %}">Minha conta</a>
     {% else %}
         <a href="{% url 'core:login' %}">Log In</a>
     {% endif %}
