--- a/templates/game/concept/list.html
+++ b/templates/game/concept/list.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <h1>Concepts</h1>
+    <h1>{{ type }} Concepts</h1>
     <ul>
     {% for obj in object_list %}
         <li><a href="{% url 'game:concept-edit' obj.id %}">{{ obj.name }}</a></li>
