--- a/templates/game/game/list.html
+++ b/templates/game/game/list.html
@@ -12,7 +12,7 @@
         <tbody>
         {% for obj in object_list %}
             <tr>
-                <td><a href="#">Game {{ forloop.counter }}</a></td>
+                <td><a href="{% url 'game:game-play' obj.id %}">Game {{ forloop.counter }}</a></td>
                 <td>{{ obj.correct }}/{{ obj.total }}</td>
             </tr>
         {% endfor %}
