adding game finished detail and minor changes

--- a/templates/core/auth.html
+++ b/templates/core/auth.html
@@ -13,5 +13,6 @@
         <input name="password" type="password" class="form-control" placeholder="Password">
         <button type="submit">Sign In</button>
     </form>
+    <a href="{% url 'core:register' %}">Sign Up</a>
 </body>
 </html>
