--- a/templates/game/game/list.html
+++ b/templates/game/game/list.html
@@ -1,7 +1,9 @@
 {% extends '../../base.html' %}
 
+{% block title %}Games{% endblock %}
+
 {% block content %}
-    <h1>{{ type }} Users</h1>
+    <h1>{{ type }} Games</h1>
     <table>
         <thead>
         <tr>
