--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <title>{% block title %}Base{% endblock %}</title>
 </head>
 <body>
-    <h1>Concept - The Game</h1>
+    <h1><a href="{% url 'core:dashboard' %}">Concept - The Game</a></h1>
     {% if user.is_authenticated %}
         <a href="{% url 'core:logout' %}">Log Out</a>
         <a href="{% url 'core:detail' user.id %}">Minha conta</a>
