--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Base{% endblock %}</title>
+    <link rel='stylesheet' type='text/css' media='screen' href="{% static 'css/main.css' %}">
 </head>
 <body>
     <h1><a href="{% url 'core:dashboard' %}">Concept - The Game</a></h1>
